--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="container flex flex-col items-center text-center">
                         <div class="w-48 h-48 rounded-full overflow-hidden mb-8"><img src="./profile.jpeg" alt="Profile"
                                 class="w-full h-full object-cover" /></div>
-                        <h1 class="text-4xl md:text-6xl font-bold mb-4">Philipp Ahrendt</h1>
+                        <h1 class="text-4xl md:text-6xl font-bold mb-4">Test Ahrendt</h1>
                         <h2 class="text-xl md:text-2xl text-primary mb-8">Autonomy Engineer </h2>
                         <div class="flex justify-center gap-8"><a href="mailto:ph.ahrendt@gmail.com"
                                 class="text-muted-foreground hover:text-primary transition-colors"
